--- a/nbs/03_data.core.ipynb
+++ b/nbs/03_data.core.ipynb
@@ -556,7 +556,7 @@
     "            if nm in kwargs: kwargs[nm] = Pipeline(kwargs[nm])\n",
     "        kwargs = merge(defaults, {k: tuplify(v, match=ds) for k,v in kwargs.items()})\n",
     "        kwargs = [{k: v[i] for k,v in kwargs.items()} for i in range_of(ds)]\n",
-    "        return cls(*[dl_type(d, **k) for d,k in zip(ds, kwargs)], path=path, device=device)\n",
+    "        return cls(*[dl_type(d, bs=bs, **k) for d,k in zip(ds, kwargs)], path=path, device=device)\n",
     "\n",
     "    @classmethod\n",
     "    def from_dblock(cls, dblock, source, path='.',  bs=64, val_bs=None, shuffle_train=True, device=None, **kwargs):\n",
